
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================

Gepi-1.6.8 (05/01/2016)
===========================
Librairies:
- Mise à jour de PHPMailer (https://github.com/PHPMailer/PHPMailer) en version 5.2.13
- HTMLPurifier : Mise à jour en 4.7.0

Discipline:
- Possibilité de signaler des saisies d'incidents (aux utilisateurs suivant 
  telle ou telle classe) par mod_alerte et non plus seulement par mail.
- Possibilité de déposer/envoyer les messages à tous les CPE plutôt que 
  seulement à celui chargé du suivi de l'élève.
- Affichage de la liste des sanctions depuis la saisie/modif d'incident.
- Envoi de mails lors de la saisie de sanction et indication de sanction effectuée ou non.
- Amélioration du tri des natures d'incident proposées.
- Possibilité pour un utilisateur de supprimer un incident qu'il a déclaré si 
  l'incident n'est rattaché à aucune mesure ni sanction.
- Pointage de menus incidents: Possibilité de définir des seuils pour envoi de 
  mail, message sur les pointages de menus incidents.
- Possibilité de déléguer à un professeur le pointage du statut effectué ou non
  d'une sanction (cas d'une sanction effectuée dans la salle d'un professeur).
- Possibilité pour un enseignant de limiter aux élèves de ses groupes l'envoi 
  de courriel lors des déclarations d'incidents
- Possibilité de déposer, via Publipostage OOo, un fichier modèle avertissement_fin_periode.odt 
  propre à tel ou tel utilisateur (par exemple pour y inclure la signature).

Absences2:
- Ajout de liens de création d'incident de puis mod_abs2 Saisir groupe.
- Accès à la liste des saisies de la veille pour tel élève depuis la colonne 
  Veille dans Absences du jour.

Cahiers de textes:
- Possibilité d'ajouter un témoin 'contrôle' dans les travaux à faire du CDT.
- Page résumé/simplifiée élève : Précision des dates de travaux futurs en title.

Carnet de notes: